# craft

./: .gitignore  CLAUDE.md  CRAFT_MY_STUDIO_PRD.md  Makefile  README.md  craft_brand_kit_page.html
backend/: .env.example  .env.old  CLAUDE.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 4906a5094a60_add_compliance_check_export_log_.py  53f0e01db9b9_.py  a1b2c3d4e5f6_add_export_log_status_download_url.py  b2c3d4e5f6a7_add_gamification_comments.py  c2d3e4f5a6b7_add_video_pipeline.py  d3e4f5a6b7c8_phase7_gamification_video.py  e1f2a3b4c5d6_add_poster_wizard_tables.py  f2c3d4e5f6a7_add_my_studio_tables.py  fb69956d07c5_initial_schema.py  g3h4i5j6k7l8_brand_kit_redesign_phase1.py  h4i5j6k7l8m9_brand_kit_templates.py  i5j6k7l8m9o0_brand_kit_zone_roles.py  j6k7l8m9n0p1_add_document_file_columns.py
backend/app/: celery_app.py  main.py
backend/app/api/: ai.py  analytics.py  artifacts.py  auth.py  brand_kit.py  brand_library.py  comments.py  compliance.py  exports.py  gamification.py  generated_videos.py  health.py  hierarchy.py  notifications.py  poster.py  poster_ai.py  presenters.py  project_members.py  projects.py  scenes.py  studio.py  suggestions.py  uploads.py  users.py  video_sessions.py
backend/app/core/: auth.py  config.py  database.py  rate_limit.py  rbac.py  redis.py  request_id.py
backend/app/models/: __init__.py  artifact.py  artifact_suggestion.py  base.py  brand_kit.py  brand_kit_template.py  brand_library_item.py  comment.py  compliance_check.py  compliance_document.py  compliance_rule.py  enums.py  export_log.py  gamification.py  generated_video.py  notification.py  poster.py  presenter.py  project.py  project_member.py  scene.py  script_version.py  studio.py  user.py  video_script.py  video_session.py
backend/app/schemas/: ai.py  analytics.py  artifact.py  auth.py  brand_kit.py  brand_library.py  comment.py  compliance.py  export.py  gamification.py  generated_video.py  notification.py  poster.py  presenter.py  project.py  project_member.py  scene.py  studio.py  suggestion.py  upload.py  user.py  video_script.py  video_session.py
backend/app/services/: ai_service.py  analytics_service.py  (+43 more)
backend/scripts/: seed.py
backend/tests/: conftest.py  test_smoke.py
(+243 files in other folders)
