[project]
name = "craft-backend"
version = "0.1.0"
requires-python = ">=3.12"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "google.*",
    "langchain.*",
    "langchain_community.*",
    "langchain_google_genai.*",
    "ffmpeg.*",
    "boto3.*",
    "botocore.*",
    "jose.*",
    "passlib.*",
    "pgvector.*",
    "cairosvg.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM"]
ignore = [
    "S101",  # Allow assert in tests
    "B008",  # Depends/File/Form/Query in FastAPI argument defaults is standard FastAPI pattern
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
# Silence noise: asyncpg leaves connection-cancel coroutines unawaited when
# the event loop closes between tests. It's a pytest-asyncio + asyncpg quirk,
# not a real test failure. Pydantic-v2 also emits warnings about field-name
# collisions ("copy") that we know about and have filed under tech debt.
filterwarnings = [
    "ignore::RuntimeWarning:_pytest.stash",
    "ignore:.*coroutine.*was never awaited.*:RuntimeWarning",
    "ignore:.*Field name \"copy\".*:UserWarning",
]
